# TG-Maker

./: BUG CONNUS  cahier_des_charges.docx  presentation
src/: demo.h  roger_example.cpp
src/base/: AResource.cpp  BranchBase.cpp  EventBase.cpp  ProjectManagerBase.cpp  TextBase.cpp  Variable.hpp  VariableBase.cpp  main.cpp
src/base/include/: BranchBase.hpp  IManager.hpp  SoundBase.hpp  VariableBase.hpp
src/game/: Game.cpp  GameRunner.cpp  Player.cpp  Position.cpp  Sound.cpp  Variable.cpp  main.cpp
src/game/include/: Branch.hpp  BufferContainer.hpp  Game.hpp  GameMenu.hpp  IExecutable.hpp  Image.hpp  Player.hpp  ProjectManager.hpp  Text.hpp
src/gui/: README
src/gui/GuiV2/: .readme  .template.do_not_alter  Action.cpp  Action.hpp  ActionItem.cpp  ActionItem.hpp  BasicProjectDialog.cpp  BasicProjectDialog.hpp  Bin2Cpp.cpp  Bin2Cpp.hpp  Branch.cpp  Branch.hpp  CloseProjectDialog.cpp  CloseProjectDialog.hpp  CloseProjectDialog.ui  CreateActionDialog.cpp  CreateActionDialog.hpp  CreateActionDialog.ui  CreateBranchDialog.cpp  CreateBranchDialog.hpp  CreateBranchDialog.ui  CreateEventDialog.cpp  CreateEventDialog.hpp  CreateEventDialog.ui  CreateTextDialog.cpp  CreateTextDialog.hpp  CreateTextDialog.ui  CreateVariableDialog.cpp  CreateVariableDialog.hpp  CreateVariableDialog.ui  (+51 more)
src/gui/GuiV2/game2/: CMakeLists.txt  DAPROJECT.cpp  Game.cpp  Game.hpp  MenuSession.cpp  MenuSession.hpp  Session.cpp  Session.hpp  exemple.cpp  main.cpp
src/stop_les_conneries/: compiletest  install_creator.sh  install_essayez_pour_voir.sh  template.do_not_alter
src/tools/: bin2c
(+37 files in other folders)
